# ocr-butterfly

./: .editorconfig  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app.py  launcher.py  pyproject.toml  requirements.txt  start.sh
static/: app.js
templates/: index.html
